Fixed alignment and padding of some elements.

--- a/src/js/components/FinanceBox/FinanceBox.styl
+++ b/src/js/components/FinanceBox/FinanceBox.styl
@@ -10,7 +10,7 @@
   &__money {
     color: #4db25c;
     font-size: small;
-    font-weight: 800;
+    font-weight: 500;
   }
 
   &__name {
