--- a/src/js/components/Logo/Logo.styl
+++ b/src/js/components/Logo/Logo.styl
@@ -3,7 +3,7 @@
 
   height: 40px;
   padding-top: 15px;
-  padding-left: 20px;
+  padding-left: 25px;
 
   &__image {
     height: 1.2em;
