--- a/src/js/components/TrackPlayer/TrackPlayer.styl
+++ b/src/js/components/TrackPlayer/TrackPlayer.styl
@@ -51,7 +51,7 @@
 
       height: 100%;
       flex: 1;
-      padding: 0 20px;
+      margin: 0 30px;
 
       font-size: 0.8em;
 
